--- a/crates/ecc-api/Cargo.toml
+++ b/crates/ecc-api/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "ecc-api"
-version = "0.1.0"
-edition = "2024"
+description = "Unofficial Elgato Command Centre API"
+version.workspace = true
+authors.workspace = true
+repository.workspace = true
+edition.workspace = true
+license-file = "../../LICENSE"
+readme = "../../README.md"
 
 [dependencies]
 aes = "0.8.4"
