--- a/crates/ecc-cli/Cargo.toml
+++ b/crates/ecc-cli/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "ecc-cli"
-version = "0.1.0"
-edition = "2024"
+description = "Unofficial Elgato Command Centre CLI"
+version.workspace = true
+authors.workspace = true
+repository.workspace = true
+edition.workspace = true
+license-file = "../../LICENSE"
+readme = "../../README.md"
 
 [[bin]]
 name = "ecc"
