--- a/crates/open_ecc/Cargo.toml
+++ b/crates/open_ecc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "ecc-cli"
-description = "Unofficial Elgato Command Centre CLI"
+name = "open_ecc"
+description = "Unofficial Elgato Command Centre API"
 version.workspace = true
 authors.workspace = true
 repository.workspace = true
@@ -8,15 +8,15 @@ edition.workspace = true
 license-file = "../../LICENSE"
 readme = "../../README.md"
 
-[[bin]]
-name = "ecc"
-path = "src/main.rs"
-
 [dependencies]
+aes = "0.8.4"
 anyhow = "1.0.98"
-clap = { version = "4.5.37", features = ["derive"] }
-directories = "6.0.0"
-ecc-api = { path = "../ecc-api" }
+cbc = "0.1.2"
+cipher = "0.4.4"
+hex = "0.4.3"
+openssl = { version = "0.10.72", features = ["vendored"] }
+rand = "0.9.1"
+reqwest = { version = "0.12.15", features = ["json"] }
 serde = { version = "1.0.219", default-features = false, features = ["derive"] }
+serde_json = "1.0.140"
 tokio = { version = "1.45.0", features = ["full"] }
-toml = "0.8.22"
