--- a/crates/open_ecc_gui/Cargo.toml
+++ b/crates/open_ecc_gui/Cargo.toml
@@ -18,6 +18,7 @@ all-features = true
 targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
 [dependencies]
+open_ecc = { version = "0.0.5", path = "../open_ecc" }
 egui = "0.31"
 eframe = { version = "0.31", default-features = false, features = [
     # "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
